--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,17 +13,14 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+dependencies = [
+    "pybindgen"
+]
+
 [project.urls]
 "Homepage" = "https://github.com/truflation/tsn-sdk-py"
 
 [tool.setuptools]
-packages = ["tsn_sdk"]
+packages = { find = { where = ["tsn_sdk"] } }
 include-package-data = true
-
-[tool.setuptools.package-data]
-tsn_sdk = ["*.so", "*.dll"]
-
-[tool.setuptools.cmdclass]
-install = "custom_commands.CustomInstallCommand"
-develop = "custom_commands.CustomDevelopCommand"
-egg_info = "custom_commands.CustomEggInfoCommand"
+package-data = { generated_bindings = ["*.so", "*.dll"] }
