Refactor package data definition in pyproject.toml
Moved shared library extensions from generated_bindings to tsn_sdk_c_bindings in setuptools configuration. This ensures clearer organization and possibly avoids conflicts in package data handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,7 @@ dependencies = [
 [tool.setuptools]
 packages = { find = { where = ["tsn_sdk"] } }
 include-package-data = true
-package-data = { generated_bindings = ["*.so", "*.dll"] }
+
+[tool.setuptools.package-data]
+tsn_sdk_c_bindings = ["*.so", "*.dll"] 
+
