--- a/setup.cfg
+++ b/setup.cfg
@@ -2,20 +2,21 @@
 name = tsn_sdk_py
 version = 0.1.0
 description = A Python SDK for TSN
-readme = README.md
+long_description = file: README.md
+long_description_content_type = text/markdown
 
 [options]
 install_requires =
     pybindgen
-
-package_dir=
-    =tsn_sdk
-packages=find:
+packages = find:
+package_dir =
+    = tsn_sdk
+include_package_data = True
 
 [options.packages.find]
-where=tsn_sdk
+where = tsn_sdk
 
 [options.package_data]
-tsn_sdk_c_bindings=
+* =
     *.so
     *.dll
