Refactor project structure and update configuration
Moved source files to 'src' directory for better organization and consistency. Updated configuration files accordingly, including modifications to 'setup.cfg' and removal of redundant sections from 'pyproject.toml'. This refactor aims to streamline the project structure and improve maintainability.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = tsn_sdk_py
+name = tsn_sdk
 version = 0.1.0
 description = A Python SDK for TSN
 long_description = file: README.md
@@ -8,13 +8,13 @@ long_description_content_type = text/markdown
 [options]
 install_requires =
     pybindgen
-packages = find:
+
 package_dir =
-    = tsn_sdk
-include_package_data = True
+     =src
+packages = find:
 
 [options.packages.find]
-where = tsn_sdk
+where=src
 
 [options.package_data]
 * =
