Implement Unix timestamp support for record insertion in Go and Python SDK
- Added StreamTypePrimitiveUnix constant in bindings.go to support Unix timestamp streams.
- Introduced InsertRecordsUnix function in bindings.go for inserting records using Unix timestamps.
- Created processInsertInputsUnix helper function to handle input processing for Unix timestamps.
- Enhanced the Python TNClient with insert_records_unix method for inserting records with Unix timestamps.
- Added unit tests for Unix timestamp record insertion and retrieval in test_tnclient.py.

These changes improve the SDK's functionality by allowing users to work with Unix timestamps, enhancing flexibility in data handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
+dependencies = []
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+]
 
 [project.urls]
 "Homepage" = "https://github.com/trufnetwork/sdk-py"
@@ -19,5 +25,10 @@ classifiers = [
 [tool.setuptools]
 packages = { find = { where = ["src"] } }
 include-package-data = true
-
 package-data = { "*" = ["*.so", "*.dll"] }
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
