chore(dev): Add pytest-mock and requests dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = []
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0.0",
+    "pytest-mock>=3.14.0",
+    "requests>=2.31.0"
 ]
 
 [project.urls]
