--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = []
 dev = [
     "pytest>=8.0.0",
     "pytest-mock>=3.14.0",
-    "requests>=2.31.0"
+    "requests>=2.31.0",
+    "pybindgen"
 ]
 
 [project.urls]
