--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dev = [
     "pytest>=8.0.0",
     "pytest-mock>=3.14.0",
     "requests>=2.31.0",
-    "pybindgen"
+    "pybindgen",
+    "python-dotenv"
 ]
 
 [project.urls]
