chore: update development dependencies in pyproject.toml
- Added `eth_account` dependency with a minimum version of 0.8.0 to the development requirements.
- This update ensures that the project has the necessary tools for Ethereum account management during development.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dev = [
     "pytest-mock>=3.14.0",
     "requests>=2.31.0",
     "pybindgen",
-    "python-dotenv"
+    "python-dotenv",
+    "eth_account>=0.8.0"
 ]
 
 [project.urls]
