chore(ci): enable write permission on release

--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -8,6 +8,8 @@ on:
   # Also allow manual re-runs
   workflow_dispatch:
 
+permissions: write-all
+
 jobs:
   build:
     name: Build for ${{ matrix.os }}
