--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install build tools
         run: | 
           python -m pip install --upgrade pip
-          pip install cibuildwheel
+          pip install cibuildwheel pybindgen
 
       - name: Build wheels with cibuildwheel
         env:
