--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -46,16 +46,13 @@ jobs:
           sudo apt-get install -y build-essential
 
       - name: Install build tools
-        run: | 
-          python -m pip install --upgrade pip
-          pip install cibuildwheel pybindgen
+        run: python -m pip install --upgrade pip install cibuildwheel pybindgen
 
       - name: Build wheels with cibuildwheel
         env:
           CIBW_BEFORE_BUILD: "make gopy_build"
           CIBW_SKIP: "*-musllinux*"
-        run: |
-          cibuildwheel --output-dir wheelhouse
+        run: cibuildwheel --output-dir wheelhouse
 
       - name: Upload wheels as artifacts
         uses: actions/upload-artifact@v4
