--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -28,11 +28,6 @@ jobs:
         with:
           go-version: '1.24.1'
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
       - name: Install gopy & goimports
         run: |
           go install github.com/go-python/gopy@v0.4.10
@@ -46,8 +41,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
       - name: Install build tools
-        run: python -m pip install --upgrade pip install cibuildwheel pybindgen
+        run: python -m pip install --upgrade pip cibuildwheel pybindgen
 
       - name: Build wheels with cibuildwheel
         env:
