--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -47,13 +48,15 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install build tools
-        run: python -m pip install --upgrade pip cibuildwheel pybindgen
+        run: |
+          python3 -m pip install --upgrade pip setuptools wheel pybindgen
 
-      - name: Build wheels with cibuildwheel
-        env:
-          CIBW_BEFORE_BUILD: "make gopy_build"
-          CIBW_SKIP: "*-musllinux*"
-        run: cibuildwheel --output-dir wheelhouse
+      - name: Build gopy bindings
+        run: make gopy_build
+        shell: bash
+
+      - name: Build wheels
+        run: python3 -m build --wheel --outdir wheelhouse
 
       - name: Upload wheels as artifacts
         uses: actions/upload-artifact@v4
