--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -56,7 +56,7 @@ jobs:
         shell: bash
 
       - name: Build wheels
-        run: python3 -m build --wheel --outdir wheelhouse
+        run: python -m build --wheel --outdir wheelhouse
 
       - name: Upload wheels as artifacts
         uses: actions/upload-artifact@v4
