--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "trufnetwork_sdk_py"
 version = "0.1.0"
+authors = [{ name = "Truf Network", email = "developer@truf.network" }]
 description = "A Python SDK for Truf Network"
 readme = "README.md"
 requires-python = ">=3.12"
