--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Download all built wheels
         uses: actions/download-artifact@v4
         with:
-          pattern: python-wheels-*
+          pattern: wheels-*
           merge-multiple: true
           path: dist/
 
