--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "trufnetwork_sdk_py"
-version = "0.1.0"
+version = "0.3.3"
+authors = [{ name = "Truf Network", email = "developer@truf.network" }]
 description = "A Python SDK for Truf Network"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
@@ -21,7 +22,7 @@ dev = [
     "requests>=2.31.0",
     "pybindgen",
     "python-dotenv",
-    "eth_account>=0.8.0"
+    "eth_account>=0.8.0",
 ]
 
 [project.urls]
@@ -30,7 +31,7 @@ dev = [
 [tool.setuptools]
 packages = { find = { where = ["src"] } }
 include-package-data = true
-package-data = { "*" = ["*.so", "*.dll"] }
+package-data = { "*" = ["*.so", "*.dll", "*.dylib"] }
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
