chore: update pip install command in distribution testing workflow
- Modified the pip install command to include the --system flag for better compatibility during the installation of built wheels.
- Ensured the workflow remains consistent with the improvements made in previous commits regarding distribution testing.

--- a/.github/workflows/distribution-test.yml
+++ b/.github/workflows/distribution-test.yml
@@ -65,6 +65,6 @@ jobs:
           uv pip install setuptools wheel pybindgen build
           make gopy_build
           python -m build --wheel --outdir /tmp/wheelhouse
-          uv pip install /tmp/wheelhouse/*.whl
+          uv pip install /tmp/wheelhouse/*.whl --system
           python tests/distribution/get_account_test.py
         shell: bash
