chore: update pip install command in distribution testing workflow
- Added the --system flag to the pip install command for improved compatibility during the installation of built wheels.
- This change aligns with recent updates to enhance the distribution testing workflow.

--- a/.github/workflows/distribution-test.yml
+++ b/.github/workflows/distribution-test.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Build and Test Natively
         run: |
           export PATH="$HOME/.local/bin:$PATH"
-          uv pip install setuptools wheel pybindgen build
+          uv pip install setuptools wheel pybindgen build --system
           make gopy_build
           python -m build --wheel --outdir /tmp/wheelhouse
           uv pip install /tmp/wheelhouse/*.whl --system
