chore: update dependencies and enhance cache support in TNClient
- Updated `go.mod` and `go.sum` to reflect new versions of `kwil-db` and `sdk-go`.
- Introduced cache-aware response handling in `TNClient` methods, including `get_records`, `get_first_record`, and `get_index`.
- Added new types for cache metadata and response structures to improve type safety.
- Implemented tests for cache support in various client methods, ensuring correct functionality and deprecation warnings for legacy signatures.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,9 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+
+[tool.pyright]
+type_checking_mode = "strict"
+reportUnknownArgumentType = false
+reportUnknownMemberType = false
+reportUnknownVariableType = false
