fix: update NODE_REPO_DIR path in CI workflow
- Changed the NODE_REPO_DIR environment variable in the CI workflow to use the GitHub workspace path for better compatibility and reliability during the build process.

This update ensures that the CI workflow correctly references the temporary node directory, improving the overall build stability.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,7 +86,7 @@ jobs:
           source .venv/bin/activate
           pytest tests/test_*.py -m integration
         env:
-          NODE_REPO_DIR: tmp-node
+          NODE_REPO_DIR: ${{ github.workspace }}/tmp-node
 
       - name: Cleanup
         # not act 
