chore: update CI workflow to copy kwil-cli binary
- Changed the step in the CI workflow from moving to copying the kwil-cli binary to the system path. This ensures the binary is correctly placed without removing the original file, enhancing build reliability.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,9 +61,9 @@ jobs:
           cd tmp-node
           task build
       
-      - name: Move kwil-cli binary to path
+      - name: Copy kwil-cli binary to path
         run: |
-          mv tmp-node/.build/kwil-cli /usr/local/bin/kwil-cli
+          sudo cp tmp-node/.build/kwil-cli /usr/local/bin/kwil-cli
           # smoke test
           kwil-cli version
 
