--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,13 @@ jobs:
           go-version: '1.24'
           check-latest: true
 
+      - name: Install gopy & goimports
+        run: |
+          go install github.com/go-python/gopy@v0.4.10
+          go install golang.org/x/tools/cmd/goimports@latest
+          echo "$HOME/go/bin" >> $GITHUB_PATH
+        shell: bash
+      
       - name: Install Taskfile
         uses: arduino/setup-task@v2
 
