--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,7 +81,7 @@ jobs:
         run: |
           uv venv .venv
           source .venv/bin/activate
-          uv sync
+          uv pip install -e .[dev]
 
       - name: Run unit tests
         run: |
