chore: simplify CI workflow by consolidating test steps
- Updated the CI workflow to rename the "Run unit tests" step to "Run tests" and removed the separate integration tests step, allowing all tests to be executed in a single command.
- Adjusted the cleanup condition to improve clarity.

This change streamlines the testing process in the CI pipeline.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,20 +83,15 @@ jobs:
           source .venv/bin/activate
           uv pip install -e .[dev]
 
-      - name: Run unit tests
+      - name: Run tests
         run: |
           source .venv/bin/activate
-          pytest tests/test_*.py -m "not integration"
-
-      - name: Run integration tests
-        run: |
-          source .venv/bin/activate
-          pytest tests/test_*.py -m integration
+          pytest tests/test_*.py
         env:
           NODE_REPO_DIR: ${{ github.workspace }}/tmp-node
 
       - name: Cleanup
         # not act 
-        if: always() && ${{ !env.ACT }}
+        if: always() && !env.ACT
         run: |
           docker system prune -af 
