--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -22,6 +22,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for setuptools_scm to detect version from git tags
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -49,7 +51,7 @@ jobs:
 
       - name: Install build tools
         run: |
-          python3 -m pip install --upgrade pip setuptools wheel pybindgen build
+          python3 -m pip install --upgrade pip setuptools wheel pybindgen build setuptools-scm
 
       - name: Build gopy bindings
         run: make gopy_build
